2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `mktemp' check to configure.in.

	* rcsedit.c: Do s/has_mktemp/defined HAVE_MKTEMP/g.
	* rcsfnms.c: Likewise.
	* conf.sh: Remove check for `mktemp'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `getuid', `getpwuid' checks to configure.in.

	* rcsbase.h: Do s/has_getuid/defined HAVE_GETUID/g.
	* ci.c: Likewise.
	* rcsutil.c: Likewise; also s/has_getpwuid/defined HAVE_GETPWUID/g.
	* conf.sh: Remove checks for `getuid', `getpwuid'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `fchmod' check to configure.in.

	* ci.c: Do s/if has_fchmod/ifdef HAVE_FCHMOD/g.
	* rcsedit.c: Likewise.
	* conf.sh: Remove check for `fchmod'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `getcwd', `getwd' check to configure.in.

	* rcsfnms.c: Do s/has_getcwd/defined HAVE_GETCWD/g;
	do s/has_getwd/defined HAVE_GETWD/g.
	* rcsbase.h (getcwd, getwd): Delete func decls.
	* conf.sh: Remove checks for `getcwd', `getwd'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `readlink' check to configure.in; use _POSIX_SYMLOOP_MAX.

	* rcsedit.c: Do s/#if has_readlink/#ifdef HAVE_READLINK/g.
	[HAVE_READLINK] (resolve_symlink): Use `_POSIX_SYMLOOP_MAX'.
	Also, assume `EINVAL' for error-on-non-symlink situation.
	* conf.sh: Remove "check" for <sys/param.h>; remove check
	for `readlink' and its error-on-non-symlink return value.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move a mass of boilerplate from conf.sh to rcsbase.h.

	In the process, we also remove (by selectively not copying)
	redundant func decls meant to augment missing entries in
	<stdio.h>, <stdlib.h>, <string.h>, <time.h>.

	* rcsbase.h: Add boilerplate code.
	* conf.sh: Delete eof boilerplate; don't bother doing the
	"Comment out lines in a.ha that the compiler rejects" step.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move checks for missing type definitions to configure.in.
